# chatbot-RPinfo

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  tech-debt.md
.github/workflows/: ci.yml
docs/: README.md  adrs-index.md  architecture.md  getting-started.md  sidebar.json
docs/adr/: 0001-arquitetura-aplicacao-ia-readonly-erp.md  0002-acesso-dados-erp-readonly-acuracia.md  0003-seguranca-autenticacao-lgpd-auditoria.md  0004-hospedagem-ci-observabilidade-kickoff.md  0005-llm-provider.md  0006-stack-frontend.md  0007-promocao-alerta-monitorar-custo-llm.md  0008-retencao-formal-audit-metadado-5-anos.md  README.md  template-adr.md
eval-sets/: qa_orchestrator_v0.1.0_baseline.yaml  qa_orchestrator_v0.2.0_baseline.yaml
memory/: SHARED.md
observability/llm/: cost_monitor_runtime.py  qa_orchestrator_trace.yaml  thresholds.yaml
prompts/: qa_orchestrator_v0.1.0.md  qa_orchestrator_v0.2.0.md
spikes/S1-SPK-05-acuracia-estoque-margem/: README.md  conftest.py  premissas.md
spikes/S2-SPK-10-ml-eval-continuo/: canary-design.md  drift-design.md  plano.md  retraining-triggers.md
src/frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.auth-real.config.ts  playwright.config.ts  tsconfig.json  vite.config.ts
src/frontend/src/: App.tsx  (+1 more)
tests/backend/: conftest.py  test_audit_service_correlation_id_pii.py  test_auth_audit.py  test_cost_monitor_thresholds.py  test_erp_readonly.py  test_health.py  test_llm_router_no_silent_fallback.py  test_no_direct_erp_access.py  test_qa_orchestrator.py  test_rate_limit_middleware.py  (+1 more)
(+117 files in other folders)
