[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-rpinfo"
version = "0.1.0"
description = "API backend for the chatbot-RPinfo controlled read-only proof."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.116",
  "pydantic>=2,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["src/backend"]
include = ["chatbot_rpinfo*"]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
addopts = ["--cov=chatbot_rpinfo", "--cov-report=term-missing"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src/backend", "tests/backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src/backend"
packages = ["chatbot_rpinfo"]

